# T2S

./: pyproject.toml
t2s/: builder.py  cli.py
t2s/core/: atom_parser.py  exchange_parser.py  lattice_reader.py  soc_detector.py  symmetry.py
t2s/generators/: atom_generator.py  dipole_generator.py  exchange_generator.py  lattice_generator.py  relax_generator.py
